test: fix bug with icon on mobile

--- a/src/pages/LendPage/components/LendCard/LendCard.module.less
+++ b/src/pages/LendPage/components/LendCard/LendCard.module.less
@@ -46,6 +46,7 @@
   }
 
   svg {
+    fill: var(--content-primary);
     width: 24px;
     height: 24px;
   }
